--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -3,8 +3,9 @@
 .movie-list {
   margin: auto;
   display: grid;
-  grid-template-columns: repeat( auto-fill, minmax(300px, 1fr) );
+  grid-template-columns: repeat( auto-fill, minmax(200px, 1fr) );
   grid-gap: 2rem;
+  padding: 2rem 0;
 }
 
 .home-brand {
