--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -2,6 +2,7 @@
 
 .movie-card {
   color: white;
+  cursor: pointer;
   align-self: flex-start;
   background-color: $colorSecondary;
   transition: transform .1s ease-in;
