--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -22,3 +22,19 @@ body {
 .d-block {
   display: block;
 }
+
+.movie-list {
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat( auto-fill, minmax(200px, 1fr) );
+  grid-gap: 2rem;
+  padding: 2rem 0;
+}
+
+.home-brand {
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  font-size: 3.5rem;
+  color: $colorAccent2;
+  font-family: $fontPrimary;
+}
