--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -64,6 +64,8 @@
     padding: .5rem;
     display: flex;
     cursor: pointer;
+    color: white;
+    text-decoration: none;
 
     img {
       height: 75px;
